trunk/Archive2/e6/dbb7266651da2d/output
main.cpp:3:1: error: 'plantilla' does not name a type
 plantilla < nombre de tipo T > 
 ^
main.cpp: In function 'int principal()':
main.cpp:11:5: error: 'f' was not declared in this scope
     f < doble > ( 1 ) ;  // instancia y pide f <doble> (doble) 
     ^
main.cpp:11:9: error: 'doble' was not declared in this scope
     f < doble > ( 1 ) ;  // instancia y pide f <doble> (doble) 
         ^
main.cpp:12:8: error: expected primary-expression before '>' token
     f <> ( 'a' ) ;  // instancia y pide f <char> (char) 
        ^
main.cpp:14:15: warning: unused variable 'ptr' [-Wunused-variable]
     void  ( * ptr ) ( std :: string )  = f ;  // instancia f <string> (cadena) 
               ^
main.cpp:15:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
